ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devops-na-nuvem-week-ingress
  annotations:
    alb.ingress.kubernetes.io/load-balancer-name: devops-na-nuvem-week-alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/subnets: subnet-0e03cd2367fd5a582,subnet-05846431de034806d
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-west-1:968225077300:certificate/6d0f7d83-ef38-4c85-9a11-992f679a9574
spec:
  ingressClassName: alb
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: devops-na-nuvem-week-frontend-service
            port:
              number: 80
      - path: /backend
        pathType: Prefix
        backend:
          service:
            name: devops-na-nuvem-week-backend-service
            port:
              number: 80
